- Added ezcWorkflowNodeLoop class to conveniently express loops.

1.0.1 - Monday 30 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11067: $execution->getVariable() throws an exeception if value
  of variable is null.
- Fixed format string issue in ezcWorkflowExecution::endThread().

1.0 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed an issue that is caused by a bug in PHP 5.2.1.


1.0rc1 - Monday 25 June 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10919: Input validation of all waiting variables before
  throwing an exception.
- Fixed issue #10922: Resuming with execution ID.
- Fixed issue #10968: Allow service objects to suspend the workflow execution.
- Documentation updates and fixes.


1.0beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10641: ezcWorkflowNodeVariableSet is not exported to XML
  properly.


1.0beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Initial release of this package.